// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mocha Package transformer should work with child packages 1`] = `
Object {
  "devDependencies": Object {
    "@types/jest": "^28.1.1",
    "esbuild": "^0.14.46",
    "esbuild-jest": "^0.5.0",
    "jest": "^28.1.0",
  },
  "jest": Object {
    "coverageReporters": Array [
      "lcov",
    ],
    "extensionsToTreatAsEsm": Array [
      ".ts",
    ],
    "globals": undefined,
    "moduleNameMapper": Object {
      "#(.*)": "<rootDir>/../../node_modules/$1",
      "(.+)\\\\.js": "$1",
    },
    "preset": undefined,
    "roots": Array [
      "<rootDir>/src",
    ],
    "testEnvironment": "node",
    "testPathIgnorePatterns": Array [
      "/node_modules/",
    ],
    "transform": Object {
      "^.+\\\\.tsx?$": Array [
        "esbuild-jest",
        Object {
          "format": "esm",
          "sourcemap": true,
        },
      ],
    },
  },
  "metapak": Object {
    "configs": Array [
      "tsesm",
    ],
    "data": Object {
      "childPackage": true,
      "files": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "cover": "npm run jest -- --coverage",
    "jest": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest",
    "test": "npm run jest",
  },
}
`;

exports[`mocha Package transformer should work with some files 1`] = `
Object {
  "devDependencies": Object {
    "coveralls": "^3.1.1",
    "jest": "^28.1.0",
  },
  "greenkeeper": Object {
    "ignore": Array [
      "jest",
      "coveralls",
    ],
  },
  "jest": Object {
    "coverageReporters": Array [
      "lcov",
    ],
    "roots": Array [
      "<rootDir>/src",
    ],
    "testPathIgnorePatterns": Array [
      "/node_modules/",
    ],
  },
  "metapak": Object {
    "data": Object {
      "testsFiles": "src/*.js src/**/*.js",
    },
  },
  "scripts": Object {
    "cover": "npm run jest -- --coverage",
    "coveralls": "npm run cover && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
    "jest": "NODE_ENV=test jest",
    "test": "npm run jest",
  },
}
`;
